# Retraction-Contagion-Graph

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  main.py
data/: __init__.py  external_apis.py  retraction_watch.py
frontend/: index.html
memory/: __init__.py  cognee_service.py
pipeline/: __init__.py  document_builder.py  ingest_runner.py
scripts/: seed_demo.py
shared/: __init__.py  config.py  exceptions.py  schemas.py
