[project]
name = "retraction-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cognee>=0.1.0",
    "fastapi~=0.131",
    "pydantic~=2.10",
    "pydantic-settings~=2.14",
    "requests~=2.32",
    "uvicorn[standard]~=0.41",
]
